<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailOrderActivity">

    <!-- Top FrameLayout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/top_fl">

        <!-- Texte : Formulaire modification Commande -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/title_modif_command"/>
    </FrameLayout>

    <!-- Ligne séparatrice -->
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/top_fl"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        />

    <!-- LinearLayout contenant le front pour la référence de la commande -->
    <LinearLayout
        android:id="@+id/reference_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp">

        <!-- Champ de texte material pour la référence-->
        <FrameLayout
            android:id="@+id/reference_fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/top_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <!-- Champ de texte material IO -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/referenceTextField"
                android:layout_marginStart="20dp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/reference_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/referenceTextInputEditField"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </FrameLayout>


    </LinearLayout>

    <!-- FrameLayout contenant le front de la date 1/2-->
    <FrameLayout
        android:id="@+id/date_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reference_ll"
        android:layout_marginTop="30dp">

        <!-- Texte de description du champ du dessous -->
        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_field"
            android:textSize="15sp"
            android:layout_marginStart="35dp"
            />
    </FrameLayout>

    <!-- FrameLayout contenant le front de la date 2/2-->
    <FrameLayout
        android:id="@+id/dpbutton_fl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_fl"
        app:layout_constraintLeft_toLeftOf="parent">

        <!-- Bouton qui fait office de champ de sélection de la date -->
        <Button
            android:id="@+id/datePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JAN 01 2022"
            android:textSize="20sp"
            android:textColor="@color/black"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="20dp"
            />


    </FrameLayout>

    <!-- FrameLayout contenant le front du champ description -->
    <FrameLayout
        android:id="@+id/description_fl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/dpbutton_fl"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <!-- Champ de texte material IO -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextField"
            android:layout_marginStart="20dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/description_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionTextInputEditField"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </FrameLayout>

    <!-- Top FrameLayout -->
    <FrameLayout
        android:id="@+id/liste_produit_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_fl"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp">

        <!-- Texte : Formulaire modification Commande -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/title_list_product"/>
    </FrameLayout>

    <!-- Ligne séparatrice -->
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/liste_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/liste_produit_fl"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        />

    <!-- LinearLayout contenant la liste des commandes -->
    <LinearLayout
        android:id="@+id/listView_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/liste_divider">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
    </LinearLayout>

    <!-- LinearLayout des boutons signature et confirmation du formulaire -->
    <LinearLayout
        android:id="@+id/btn_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/listView_ll"
        android:gravity="center">

        <!--Bouton confirmation formulaire -->
        <Button
            android:id="@+id/modificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/modification_button" />

        <!-- Bouton signature -->
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_ll"
        android:gravity="center">

        <!-- Bouton signature -->
        <Button
            android:id="@+id/addProductBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/add_product_button"/>


    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>