<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormCreationOrderActivity">


    <!-- Top FrameLayout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/top_fl">

        <!-- Texte : Formulaire Création Commande -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/title_creation_command" />
    </FrameLayout>

    <!-- Ligne séparatrice -->
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/top_fl"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        />

    <!-- LinearLayout contenant le front pour la référence de la commande -->
    <LinearLayout
        android:id="@+id/reference_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp">

        <!-- Champ de texte material-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/referenceTextField"
            android:layout_marginStart="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/reference_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/referenceTextInputEditField"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Bouton image cliquable -->
        <ImageButton
            android:id="@+id/rolldices"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/rolldice"
            android:background="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!-- FrameLayout contenant le front de la date 1/2-->
    <FrameLayout
        android:id="@+id/date_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reference_ll"
        android:layout_marginTop="30dp">

        <!-- Texte de description du champ du dessous -->
        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_field"
            android:textSize="15sp"
            android:layout_marginStart="35dp"
            />
    </FrameLayout>

    <!-- FrameLayout contenant le front de la date 2/2-->
    <FrameLayout
        android:id="@+id/dpbutton_fl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_fl"
        app:layout_constraintLeft_toLeftOf="parent">

        <!-- Bouton qui fait office de champ de sélection de la date -->
        <Button
            android:id="@+id/datePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JAN 01 2022"
            android:textSize="20sp"
            android:textColor="@color/black"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="20dp"
            />


    </FrameLayout>

    <!-- FrameLayout contenant le front du champ description -->
    <FrameLayout
        android:id="@+id/description_fl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/dpbutton_fl"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <!-- Champ de texte material IO -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextField"
            android:layout_marginStart="20dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/description_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionTextInputEditField"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </FrameLayout>

    <!-- LinearLayout des boutons signature et confirmation du formulaire -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/description_fl"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <!--Bouton confirmation formulaire -->
        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/confirm_button" />

        <!-- Bouton signature -->
        <Button
            android:id="@+id/signatureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature_field"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>