<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormCreationProductActivity">

  <!-- Top FrameLayout -->
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:id="@+id/top_fl">

    <!-- Texte : Formulaire Création Commande -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/title_cration_product" />
  </FrameLayout>

  <!-- Ligne séparatrice -->
  <com.google.android.material.divider.MaterialDivider
      android:id="@+id/top_divider"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintTop_toBottomOf="@id/top_fl"
      app:dividerInsetStart="16dp"
      app:dividerInsetEnd="16dp"
      />

  <!-- LinearLayout contenant le front pour la référence de la commande -->
  <LinearLayout
      android:id="@+id/nom_ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/top_divider"
      app:layout_constraintLeft_toLeftOf="parent"
      android:layout_marginTop="30dp">

    <!-- Champ de texte material-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomTextField"
        android:layout_marginStart="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/nom_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/nomTextInputEditField"
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          />

    </com.google.android.material.textfield.TextInputLayout>

  </LinearLayout>


  <!-- FrameLayout contenant le front du champ description -->
  <FrameLayout
      android:id="@+id/prix_fl"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      app:layout_constraintTop_toBottomOf="@id/nom_ll"
      app:layout_constraintLeft_toLeftOf="parent"
      >

    <!-- Champ de texte material IO -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prixTextField"
        android:layout_marginStart="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/prix_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/prixTextInputEditField"
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          android:inputType="number"
          />

    </com.google.android.material.textfield.TextInputLayout>


  </FrameLayout>

  <!-- LinearLayout des boutons signature et confirmation du formulaire -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/prix_fl"
      android:layout_marginTop="50dp"
      android:gravity="center">

    <!--Bouton confirmation formulaire -->
    <Button
        android:id="@+id/addProductBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/confirm_button" />

  </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>

